# Assignment-3-Observer-Pattern--Testing---CI-in-Financial-Engineering-

./: .coverage  GITHUB_ACTIONS_SETUP.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_broker.py  test_engine.py  test_observers.py  test_subject.py
trading/: __init__.py  broker.py  engine.py  observers.py  subject.py
